--- a/Device/STM32F303K8Tx/STCubeGenerated/MDK-ARM/STCubeGenerated/STCubeGenerated.build_log.htm
+++ b/Device/STM32F303K8Tx/STCubeGenerated/MDK-ARM/STCubeGenerated/STCubeGenerated.build_log.htm
@@ -27,7 +27,23 @@ Project File Date:  02/07/2019
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 6 (build 750)', folder: 'C:\Keil_v5\ARM\ARMCC\Bin'
 Build target 'STCubeGenerated'
-"STCubeGenerated\STCubeGenerated.axf" - 0 Error(s), 0 Warning(s).
+compiling uart.c...
+../Inc/uart.h(11): warning:  #1-D: last line of file ends without a newline
+  #endif
+../Inc/i2c.h(24): warning:  #1-D: last line of file ends without a newline
+  #endif
+../Inc/adc.h(24): warning:  #1295-D: Deprecated declaration get_value_hum_sol - give arg types
+  void get_value_hum_sol();
+../Inc/adc.h(26): warning:  #1295-D: Deprecated declaration calibration_hum_sol - give arg types
+  void calibration_hum_sol();
+../Inc/adc.h(28): warning:  #1-D: last line of file ends without a newline
+  #endif
+..\Src\uart.c(56): warning:  #1-D: last line of file ends without a newline
+  }
+..\Src\uart.c: 6 warnings, 0 errors
+linking...
+Program Size: Code=14268 RO-data=480 RW-data=32 ZI-data=1376  
+"STCubeGenerated\STCubeGenerated.axf" - 0 Error(s), 6 Warning(s).
 
 <h2>Software Packages used:</h2>
 
@@ -50,7 +66,7 @@ Package Vendor: Keil
 <h2>Collection of Component Files used:</h2>
 
    * Component: ARM::CMSIS:CORE:5.1.2
-Build Time Elapsed:  00:00:00
+Build Time Elapsed:  00:00:02
 </pre>
 </body>
 </html>
