--- a/Device/STM32F303K8Tx/STCubeGenerated/MDK-ARM/STCubeGenerated/STCubeGenerated.build_log.htm
+++ b/Device/STM32F303K8Tx/STCubeGenerated/MDK-ARM/STCubeGenerated/STCubeGenerated.build_log.htm
@@ -22,12 +22,18 @@ Dialog DLL:      TCM.DLL V1.36.1.0
  
 <h2>Project:</h2>
 C:\Users\Sebastien\Documents\RTE\Device\STM32F303K8Tx\STCubeGenerated\MDK-ARM\STCubeGenerated.uvprojx
-Project File Date:  02/07/2019
+Project File Date:  02/14/2019
 
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 6 (build 750)', folder: 'C:\Keil_v5\ARM\ARMCC\Bin'
 Build target 'STCubeGenerated'
-compiling uart.c...
+compiling pwm.c...
+../Inc/pwm.h(17): warning:  #1-D: last line of file ends without a newline
+  #endif
+..\Src\pwm.c(24): warning:  #1-D: last line of file ends without a newline
+  }
+..\Src\pwm.c: 2 warnings, 0 errors
+compiling main.c...
 ../Inc/uart.h(11): warning:  #1-D: last line of file ends without a newline
   #endif
 ../Inc/i2c.h(24): warning:  #1-D: last line of file ends without a newline
@@ -38,12 +44,14 @@ compiling uart.c...
   void calibration_hum_sol();
 ../Inc/adc.h(28): warning:  #1-D: last line of file ends without a newline
   #endif
-..\Src\uart.c(56): warning:  #1-D: last line of file ends without a newline
-  }
-..\Src\uart.c: 6 warnings, 0 errors
+../Inc/pwm.h(17): warning:  #1-D: last line of file ends without a newline
+  #endif
+../Src/main.c(125): warning:  #223-D: function "calib_hum_sol" declared implicitly
+  	calib_hum_sol();
+../Src/main.c: 7 warnings, 0 errors
 linking...
-Program Size: Code=14268 RO-data=480 RW-data=32 ZI-data=1376  
-"STCubeGenerated\STCubeGenerated.axf" - 0 Error(s), 6 Warning(s).
+Program Size: Code=16572 RO-data=480 RW-data=32 ZI-data=1504  
+"STCubeGenerated\STCubeGenerated.axf" - 0 Error(s), 9 Warning(s).
 
 <h2>Software Packages used:</h2>
 
@@ -66,7 +74,7 @@ Package Vendor: Keil
 <h2>Collection of Component Files used:</h2>
 
    * Component: ARM::CMSIS:CORE:5.1.2
-Build Time Elapsed:  00:00:02
+Build Time Elapsed:  00:00:03
 </pre>
 </body>
 </html>
