--- a/Device/STM32F303K8Tx/STCubeGenerated/MDK-ARM/STCubeGenerated/STCubeGenerated.build_log.htm
+++ b/Device/STM32F303K8Tx/STCubeGenerated/MDK-ARM/STCubeGenerated/STCubeGenerated.build_log.htm
@@ -22,18 +22,13 @@ Dialog DLL:      TCM.DLL V1.36.1.0
  
 <h2>Project:</h2>
 C:\Users\Sebastien\Documents\RTE\Device\STM32F303K8Tx\STCubeGenerated\MDK-ARM\STCubeGenerated.uvprojx
-Project File Date:  02/14/2019
+Project File Date:  02/20/2019
 
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 6 (build 750)', folder: 'C:\Keil_v5\ARM\ARMCC\Bin'
 Build target 'STCubeGenerated'
 compiling pwm.c...
-../Inc/pwm.h(17): warning:  #1-D: last line of file ends without a newline
-  #endif
-..\Src\pwm.c(24): warning:  #1-D: last line of file ends without a newline
-  }
-..\Src\pwm.c: 2 warnings, 0 errors
-compiling main.c...
+compiling uart.c...
 ../Inc/uart.h(11): warning:  #1-D: last line of file ends without a newline
   #endif
 ../Inc/i2c.h(24): warning:  #1-D: last line of file ends without a newline
@@ -44,14 +39,12 @@ compiling main.c...
   void calibration_hum_sol();
 ../Inc/adc.h(28): warning:  #1-D: last line of file ends without a newline
   #endif
-../Inc/pwm.h(17): warning:  #1-D: last line of file ends without a newline
-  #endif
-../Src/main.c(125): warning:  #223-D: function "calib_hum_sol" declared implicitly
-  	calib_hum_sol();
-../Src/main.c: 7 warnings, 0 errors
+..\Src\uart.c(57): warning:  #1-D: last line of file ends without a newline
+  }
+..\Src\uart.c: 6 warnings, 0 errors
 linking...
-Program Size: Code=16572 RO-data=480 RW-data=32 ZI-data=1504  
-"STCubeGenerated\STCubeGenerated.axf" - 0 Error(s), 9 Warning(s).
+Program Size: Code=16920 RO-data=480 RW-data=32 ZI-data=1504  
+"STCubeGenerated\STCubeGenerated.axf" - 0 Error(s), 6 Warning(s).
 
 <h2>Software Packages used:</h2>
 
@@ -74,7 +67,7 @@ Package Vendor: Keil
 <h2>Collection of Component Files used:</h2>
 
    * Component: ARM::CMSIS:CORE:5.1.2
-Build Time Elapsed:  00:00:03
+Build Time Elapsed:  00:00:04
 </pre>
 </body>
 </html>
