--- a/Device/STM32F303K8Tx/STCubeGenerated/MDK-ARM/STCubeGenerated/STCubeGenerated.build_log.htm
+++ b/Device/STM32F303K8Tx/STCubeGenerated/MDK-ARM/STCubeGenerated/STCubeGenerated.build_log.htm
@@ -22,29 +22,18 @@ Dialog DLL:      TCM.DLL V1.36.1.0
  
 <h2>Project:</h2>
 C:\Users\Sebastien\Documents\RTE\Device\STM32F303K8Tx\STCubeGenerated\MDK-ARM\STCubeGenerated.uvprojx
-Project File Date:  02/20/2019
+Project File Date:  02/21/2019
 
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 6 (build 750)', folder: 'C:\Keil_v5\ARM\ARMCC\Bin'
 Build target 'STCubeGenerated'
 compiling pwm.c...
-compiling uart.c...
-../Inc/uart.h(11): warning:  #1-D: last line of file ends without a newline
-  #endif
-../Inc/i2c.h(24): warning:  #1-D: last line of file ends without a newline
-  #endif
-../Inc/adc.h(24): warning:  #1295-D: Deprecated declaration get_value_hum_sol - give arg types
-  void get_value_hum_sol();
-../Inc/adc.h(26): warning:  #1295-D: Deprecated declaration calibration_hum_sol - give arg types
-  void calibration_hum_sol();
-../Inc/adc.h(28): warning:  #1-D: last line of file ends without a newline
-  #endif
-..\Src\uart.c(57): warning:  #1-D: last line of file ends without a newline
+..\Src\pwm.c(41): warning:  #1-D: last line of file ends without a newline
   }
-..\Src\uart.c: 6 warnings, 0 errors
+..\Src\pwm.c: 1 warning, 0 errors
 linking...
-Program Size: Code=16920 RO-data=480 RW-data=32 ZI-data=1504  
-"STCubeGenerated\STCubeGenerated.axf" - 0 Error(s), 6 Warning(s).
+Program Size: Code=17004 RO-data=480 RW-data=32 ZI-data=1504  
+"STCubeGenerated\STCubeGenerated.axf" - 0 Error(s), 1 Warning(s).
 
 <h2>Software Packages used:</h2>
 
@@ -67,7 +56,7 @@ Package Vendor: Keil
 <h2>Collection of Component Files used:</h2>
 
    * Component: ARM::CMSIS:CORE:5.1.2
-Build Time Elapsed:  00:00:04
+Build Time Elapsed:  00:00:03
 </pre>
 </body>
 </html>
