--- a/Device/STM32F303K8Tx/STCubeGenerated/MDK-ARM/STCubeGenerated/STCubeGenerated.build_log.htm
+++ b/Device/STM32F303K8Tx/STCubeGenerated/MDK-ARM/STCubeGenerated/STCubeGenerated.build_log.htm
@@ -27,13 +27,59 @@ Project File Date:  02/21/2019
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 6 (build 750)', folder: 'C:\Keil_v5\ARM\ARMCC\Bin'
 Build target 'STCubeGenerated'
-compiling pwm.c...
-..\Src\pwm.c(41): warning:  #1-D: last line of file ends without a newline
+compiling i2c.c...
+../Inc/i2c.h(24): warning:  #1-D: last line of file ends without a newline
+  #endif
+..\Src\i2c.c(24): warning:  #1-D: last line of file ends without a newline
   }
-..\Src\pwm.c: 1 warning, 0 errors
+..\Src\i2c.c: 2 warnings, 0 errors
+compiling uart.c...
+../Inc/uart.h(14): warning:  #1-D: last line of file ends without a newline
+  #endif
+../Inc/i2c.h(24): warning:  #1-D: last line of file ends without a newline
+  #endif
+../Inc/adc.h(25): warning:  #1295-D: Deprecated declaration get_value_hum_sol - give arg types
+  void get_value_hum_sol();
+../Inc/adc.h(27): warning:  #1295-D: Deprecated declaration calibration_hum_sol - give arg types
+  void calibration_hum_sol();
+../Inc/adc.h(29): warning:  #1-D: last line of file ends without a newline
+  #endif
+..\Src\uart.c(111): warning:  #1-D: last line of file ends without a newline
+  }
+..\Src\uart.c: 6 warnings, 0 errors
+compiling main.c...
+../Inc/uart.h(14): warning:  #1-D: last line of file ends without a newline
+  #endif
+../Inc/i2c.h(24): warning:  #1-D: last line of file ends without a newline
+  #endif
+../Inc/adc.h(25): warning:  #1295-D: Deprecated declaration get_value_hum_sol - give arg types
+  void get_value_hum_sol();
+../Inc/adc.h(27): warning:  #1295-D: Deprecated declaration calibration_hum_sol - give arg types
+  void calibration_hum_sol();
+../Inc/adc.h(29): warning:  #1-D: last line of file ends without a newline
+  #endif
+../Src/main.c(129): warning:  #223-D: function "calib_hum_sol" declared implicitly
+  	calib_hum_sol();
+../Src/main.c: 6 warnings, 0 errors
+compiling gestion.c...
+../Inc/i2c.h(24): warning:  #1-D: last line of file ends without a newline
+  #endif
+../Inc/adc.h(25): warning:  #1295-D: Deprecated declaration get_value_hum_sol - give arg types
+  void get_value_hum_sol();
+../Inc/adc.h(27): warning:  #1295-D: Deprecated declaration calibration_hum_sol - give arg types
+  void calibration_hum_sol();
+../Inc/adc.h(29): warning:  #1-D: last line of file ends without a newline
+  #endif
+../Inc/uart.h(14): warning:  #1-D: last line of file ends without a newline
+  #endif
+..\Src\gestion.c(50): warning:  #186-D: pointless comparison of unsigned integer with zero
+  	}else if (Regulateur_Proportionnel.commande < 0)
+..\Src\gestion.c(144): warning:  #1-D: last line of file ends without a newline
+  }
+..\Src\gestion.c: 7 warnings, 0 errors
 linking...
-Program Size: Code=17004 RO-data=480 RW-data=32 ZI-data=1504  
-"STCubeGenerated\STCubeGenerated.axf" - 0 Error(s), 1 Warning(s).
+Program Size: Code=18612 RO-data=544 RW-data=220 ZI-data=1508  
+"STCubeGenerated\STCubeGenerated.axf" - 0 Error(s), 21 Warning(s).
 
 <h2>Software Packages used:</h2>
 
@@ -56,7 +102,7 @@ Package Vendor: Keil
 <h2>Collection of Component Files used:</h2>
 
    * Component: ARM::CMSIS:CORE:5.1.2
-Build Time Elapsed:  00:00:03
+Build Time Elapsed:  00:00:07
 </pre>
 </body>
 </html>
